# spotify-isrc-api

./: Cargo.toml  Dockerfile
.github/workflows/: docker.yml
src/: main.rs
