[package]
name = "spotify-isrc-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
musicbrainz_rs = { version = "0.13", features = ["async"] }
rspotify = "0.16.1"
chrono = "0.4.44"
futures = "0.3.32"
anyhow = "1.0.102"
